[package]
name = "modupipe-rs"
description = "A modular and extensible ETL-like pipeline builder"
keywords = ["etl", "pipeline", "pipe"]
categories = ["data-structures"]
homepage = "https://github.com/vigenere23/modupipe-rs"
repository = "https://github.com/vigenere23/modupipe-rs"
readme = "README.md"
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
