[package]
name = "modupipe"
description = "A modular and extensible ETL-like pipeline builder"
keywords = ["etl", "pipeline", "pipe"]
categories = ["data-structures"]
homepage = "https://github.com/vigenere23/modupipe-rs"
repository = "https://github.com/vigenere23/modupipe-rs"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
